# cpp-coveralls

tests/issue65/: Makefile.am  configure.ac  test.cpp  test.sh
tests/issue65/lib/: Makefile.am  configure.ac
tests/issue65/lib/src/: foo.cpp
